--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
             cursor: pointer;
             transition: all 0.3s ease;
             margin: 5px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .btn-primary {
@@ -177,6 +180,9 @@
             cursor: pointer;
             font-size: 1rem;
             transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .copy-btn:hover {
@@ -371,7 +377,6 @@
             margin-left: 5px;
         }
 
-        /* Responsive adjustments */
         @media (max-width: 600px) {
             .setup-screen {
                 padding: 20px 10px;
@@ -395,7 +400,6 @@
             }
         }
 
-        /* Loading animation */
         .loading-dots {
             display: inline-flex;
             align-items: center;
@@ -632,7 +636,4 @@
             
             peerConnection.onicecandidate = event => {
                 if (event.candidate) {
-                    if (dataChannel && dataChannel.readyState === 'open') {
-                        dataChannel.send(JSON.stringify({
-                            type: 'ice-candidate',
-            
+                    if (dataChannel && dataChannel.readyState ===
